# futures-await

./: .travis.yml  Cargo.toml  README.md
examples/: echo.rs
futures-async-macro/: Cargo.toml
futures-async-macro/src/: await_macro.rs  lib.rs
futures-async-macro/src/async_macro/: for_loop.rs  mod.rs  ret_ty.rs  type_ann.rs
futures-async-macro/src/util/: mod.rs
futures-await-async-macro/: Cargo.toml
futures-await-async-macro/src/: lib.rs  type_ann.rs
futures-await-await-macro/: Cargo.toml
futures-await-await-macro/src/: lib.rs
src/: lib.rs  main.rs
src/__rt/: future.rs  mod.rs  pinned_future.rs  pinned_stream.rs  stream.rs
testcrate/: Cargo.toml
testcrate/ui/: bad-await.rs  bad-await.stderr  bad-return-type.rs  bad-return-type.stderr  borrowed-argument.rs  borrowed-argument.stderr  error-from-not-implemented.rs  error-from-not-implemented.stderr  forget-ok.rs  forget-ok.stderr  generic-not-static.rs  generic-not-static.stderr  missing-item.rs  move-captured-variable.rs  move-captured-variable.stderr  not-a-result.rs  not-a-result.stderr  stream-generic-error.rs  stream-generic-error.stderr  type_error.rs  type_error.stderr  unresolved-type.rs  unresolved-type.stderr  update-references.sh
tests/: elisions.rs  hetero-await.rs  lifetime.rs  nested.rs  pinned.rs  smoke.rs  stream-error-interop.rs  stream-generic-error.rs  stream-smoke.rs
