[package]
name = "futures-async-macro"
version = "0.1.0"
authors = ["Alex Crichton <alex@alexcrichton.com>"]

[lib]
proc-macro = true

[dependencies]
quote = { git = 'https://github.com/dtolnay/quote' }
proc-macro2 = { version = "0.1", features = ["unstable"] }
pmutil = { git = 'https://github.com/kdy1/rust-pmutil' }

[dependencies.syn]
git = 'https://github.com/dtolnay/syn'
features = ["full", "fold", "parsing", "printing", "clone-impls", "extra-traits"]
default-features = false

[dependencies.synom]
git = 'https://github.com/dtolnay/syn'
