[package]
name = "futures-await-async-macro"
version = "0.1.1"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/alexcrichton/futures-await"
description = """
Definition of the `#[async]` macro for the `futures-await` crate as well as a
few other assorted macros.
"""

[lib]
proc-macro = true

[dependencies]
quote = "0.5"
proc-macro2 = { version = "0.3", features = ["nightly"] }

[dependencies.syn]
version = "0.13.1"
features = ["full", "fold", "parsing", "printing", "proc-macro"]
default-features = false
