[package]
name = "futures-await-async-macro"
version = "0.1.4"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/alexcrichton/futures-await"
description = """
Definition of the `#[async]` macro for the `futures-await` crate as well as a
few other assorted macros.
"""

[lib]
proc-macro = true

[dependencies]
quote = "0.6"
proc-macro2 = { version = "0.4", features = ["nightly"] }

[dependencies.syn]
version = "0.14"
features = ["full", "fold", "parsing", "printing", "proc-macro"]
default-features = false
